# rust-actix-juniper-example

./: .env.example  .gitignore  Cargo.toml  README.md
src/: config.rs  main.rs
src/modules/users/: mod.rs  route.rs
src/modules/users/gql/: error.rs
src/modules/users/resolver/: mod.rs  mutation.rs  query.rs
src/modules/users/services/: example.rs  mod.rs
src/restapi/: mod.rs  playground.rs
