[package]
name = "actix-juniper"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.6.5"
actix-web = "4.4.0"
actix-web-lab = "0.20.1"
aes-256-gcm = "1.1.2"
dotenv = "0.15.0"
env_logger = "0.11.3"
juniper = "0.16.1"
mini-config = {version="0.1.3", features=["derive"]}
mongodb = "2.8.0"
bson = {version="2.8.1", features=["chrono-0_4"] }
serde = "1.0.193"
serde_json = "1.0.108"
sha2 = { version = "0.10", default-features = false }
tokio = {version="1.36.0", features = ["full"] }
tracing = "0.1.40"